# capstone

./: .gitignore  CONCURRENT.md  IDEAS.md  README.md  TODO.md  uart_bidir_protocol.h
.theia/: launch.json
adc_singlechannel_LP_MSPM0G3507_freertos_ticlang/: .cproject  .project  adcsinglechannel.c  main_freertos.c  ti_msp_dl_config.h
capstone/: .clang-format  .clang-format-ignore  .cproject  .project  capstone.syscfg  led.c  led.h  main_freertos.c  main_thread.c  ti_msp_dl_config.c  ti_msp_dl_config.h
firmware/: .ccsproject  .clang-format  .cproject
freertos_builds_LP_MSPM0G3507_release_ticlang/: .README.md.swp  .ccsproject  .cproject  .project  FreeRTOSConfig.h
include/: mspm0g3507.h
rpi-admin/: auto.misc  backup_box.sh  copy-usb-rule.rules  copy-usb-service@.service  copy_calibration.sh  copy_data.sh  jeb.crontab  misc.autofs  my_calibrate.sh  root.crontab  setup.sh
sqd_sim/: Cargo.toml  build.rs  cconfig  cinclude  script
sqd_sim/.cargo/: config.toml
sqd_sim/csrc/: chess.c  game.c
sqd_sim/csrc/main/: main.c
sqd_sim/src/: cli.rs  emu.rs  event.rs  main.rs  parser.rs  ui.rs
sqd_sim/src/spoof/: button.rs  clock.rs  flash_square.rs  freertos.rs  led.rs  led_translation.rs  mod.rs  sensor.rs  uart.rs
src/: kernel.c  kernel.h  kernel.s
testing/: bins.sh  correct_data5.sh  fenparser.py  gen_bins.py  gen_boardstate.py
uart-protocol/: uart_bidir_protocol.c  uart_bidir_protocol.h
undo-handler/: cm_stack.c  cm_stack.h  test_cm_stack.c
wrapper/: build.sh  requirements.txt  rpi5_uartboost.c  rpi_uartboost.c  setup.py  sf_wrapper.py  sqd_sim.py  (+2 more)
(+113 files in other folders)
