[package]
name = "sqd_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
parking_lot = "0.12.3"
once_cell = "1.21.0"
colored = "3.0.0"
chrono = "0.4.40"
ctrlc = "3.4.5"
clap = { version = "4.5.32", features = ["derive"] }
shlex = "1.3.0"

[build-dependencies]
cc = "1.2.16"
